Compiler/src/main/java/Testing/Tests/SyntacticTests/failing/emptyFile.ru
/? Descripción: este caso de prueba se fija si el lenguaje acepta un archivo vacio
/? Salida esperada:
/? ERROR: SINTÁCTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 6 | COLUMNA 1 | Se esperaba: start o impl o struct y llegó: $EOF$